Fixed indentation with guidance